syntax = "proto3";

package dwjk.dtp;

enum ResponseStatusCode                     /* API响应状态码 */
{
    RESPONSE_STATUS_CODE_UNDEFINED = 0;
    RESPONSE_CODE_OK = 200;                 // 200:成功(服务器成功处理请求);
    RESPONSE_CODE_BAD_REQUEST = 400;        // 400:请求错误(请求参数有误,参考message)
    RESPONSE_CODE_UNAUTHORIZED = 401;       // 401:未授权(需要登录)
    RESPONSE_CODE_FORBIDDEN    = 403;       // 403:拒绝(违规, 柜台拒绝?)
    RESPONSE_CODE_INTERNAL_ERROR = 500;     // 500:服务器内部错误
}


enum Exchange                               /* 交易所 */
{
    EXCHANGE_UNDEFINED   = 0;
    EXCHANGE_SH_A        = 1;               // 沪A
    EXCHANGE_SZ_A        = 2;               // 深A
}

enum OrderType                              /* 委托竞价类型 */
{
    ORDER_TYPE_UNDEFINED    = 0;
    ORDER_TYPE_LIMIT        = 1;            // 限价
    // ORDER_TYPE_MARKET       = 2;         // 市价((沪市)最优五档即时成交剩余转限价/(深市)最优五档即时成交剩余撤单)
    // ORDER_TYPE_BEST_5_ONLY  = 3;         // 最优五档即时成交剩余撤单(上海/深圳)
    // ORDER_TYPE_BEST_5_LIMIT = 4;         // 最优五档即时成交剩余转限价(上海)
    // ORDER_TYPE_YOU_BEST     = 5;         // 对手方最优价格(最优一档)委托(深圳)
    // ORDER_TYPE_WE_BEST      = 6;         // 本方最优价格(最优一档)委托(深圳)
    // ORDER_TYPE_MARKET_ONCE  = 7;         // 即时成交剩余撤销委托(深圳)
    // ORDER_TYPE_MARKET_ALL   = 8;         // 全额成交或撤销委托(深圳)
}

enum OrderSide                              /* 委托竞价方向(买卖类型) */
{
    ORDER_SIDE_UNDEFINED    = 0;
    ORDER_SIDE_BUY          = 1;            // 买入、新股申购
    ORDER_SIDE_SELL         = 2;            // 卖出
    ORDER_SIDE_CREATION     = 11;           // ETF申购
    ORDER_SIDE_REDEMPTON    = 12;           // ETF赎回
    ORDER_SIDE_REVERSE_REPO = 21;           // 质押式逆回购(国债逆回购)
    // ORDER_SIDE_CREDIT_BUY  = 31;            // 信用买入
    // ORDER_SIDE_CREDIT_SELL = 32;            // 信用卖出
}

enum OrderStatus                            /* 委托状态 */
{                                           // 该状态只体现交易所委托状态
                                            // 柜台直接拒单时，不使用该状态，通过ReportHeader的code和message
    ORDER_STATUS_UNDEFINED = 0;
    ORDER_STATUS_PLACING = 1;               // 正报: 交易所处理中(order_exchange_id已产生)
    ORDER_STATUS_PLACED = 2;                // 已报: 交易所已挂单
    ORDER_STATUS_PARTIAL_FILLED = 3;        // 部分成交
    ORDER_STATUS_FILLED = 4;                // 全部成交
    ORDER_STATUS_CANCELLING = 5;            // 待撤
    ORDER_STATUS_CANCELLED = 6;             // 已撤
    ORDER_STATUS_PARTIAL_CANCELLING = 7;    // 部分成交其余待撤
    ORDER_STATUS_PARTIAL_CANCELLED = 8;     // 部分成交其余已撤
    ORDER_STATUS_FAILED = 9;                // 废单
}

enum FillStatus                             /* 成交状态 */
{
    FILL_STATUS_UNDEFINED = 0;
    FILL_STATUS_FILLED = 1;                 // 成交
    FILL_STATUS_CANCELLED = 2;              // 撤单成功
    FILL_STATUS_FAILED = 3;                 // 废单
}

enum QueryOrderCriteria                     /* 委托查询限制 */
{
    QUERY_ONLY_ORDER = 0;                   // 只查询委托（不包含撤单委托）
    QUERY_ORDER_CAN_BE_CANCELLED = 1;       // 只查可撤
    QUERY_ONLY_CANCEL_ORDER = 2;            // 只查询撤单委托   
    QUERY_ORDER_ALL = 3;                    // 查询全部类型
}
